# agent-toolkit

./: .gitignore  README.md  config.yaml  pyproject.toml  readme_shields.json
.github/workflows/: mcp_release.yml  update_docs_context.yml  update_examples_context.yml  update_master_context.yml  update_sdk_context.yml
context/: count_tokens.py  llms-full.md  llms-full.txt  llms.md  merge_llms_full_txt.py  merge_llms_txt.py  utils.py
context/docs/: crawl_coda_tree.py  doc_tree.json  docs_context.md  process_docs.py
context/docs/fragments/: advanced_visual_search_pipelines_82.txt  callback_details_66.txt  collections_68.txt  custom_annotations_81.txt  deep_dive_into_prompt_engineering_mastering_video_scene_indexing_93.txt  guide_subtitles_73.txt  how_accurate_is_your_search_88.txt  index.txt  language_support_79.txt  playground_for_scene_extractions_83.txt  public_collections_102.txt  quick_start_guide_38.txt  ref_subtitle_styles_57.txt  scene_extraction_algorithms_84.txt  semantic_search_89.txt  video_indexing_guide_101.txt  (+2 more)
context/examples/: examples_context.md  process_examples.py
context/instructions/: prompt.md
context/prompts/: custom_1.txt  custom_2.txt  default_docs.txt  default_ipynb.txt  python-to-node-sdk.txt  refine_docs.txt  refine_ipynb.txt  spec-to-python-sdk.txt
modelcontextprotocol/: Dockerfile  README.md  constants.py  main.py  pyproject.toml  smithery.yaml  utils.py
modelcontextprotocol/videodb_director_mcp/: __init__.py  cli_commands.py  constants.py  main.py
modelcontextprotocol/videodb_mcp_server/: constants.py  main.py  utils.py
(+11 files in other folders)
